New/interprete2/target/generated-sources/antlr4/com/milenguaje/simple/interprete2/SimpleParser.java
// Generated from Simple.g4 by ANTLR 4.4
package com.milenguaje.simple.interprete2;

	import java.util.Map;
	import java.util.HashMap;
	import java.util.List;
	import java.util.ArrayList;
	import com.milenguaje.simple.interprete2.ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN=1, PRINTLN=2, COM=3, DEF=4, PUT=5, ADDO=6, MULTO=7, DIVO=8, SUMO=9, 
		CUP=10, CDOWN=11, CRIGHT=12, CLEFT=13, POS=14, POSX=15, POSY=16, COLOR=17, 
		DOWN=18, UP=19, BEG=20, FOR=21, LOOP=22, END=23, TO=24, CASE=25, WHEN=26, 
		THEN=27, ELSE=28, REPEAT=29, UNTIL=30, WHILE=31, WHEND=32, EQUAL=33, AND=34, 
		OR=35, GREATER=36, SMALLER=37, SUBSTR=38, RANDOM=39, PLUS=40, MINUS=41, 
		MULT=42, DIV=43, GT=44, LT=45, GEQ=46, LEQ=47, EQ=48, NEQ=49, ASSIGN=50, 
		BRACKET_OPEN=51, BRACKET_CLOSE=52, PAR_OPEN=53, PAR_CLOSE=54, P_OPEN=55, 
		P_CLOSE=56, SEMICOLON=57, COLON=58, BOOLEAN=59, ID=60, NUMBER=61, WS=62;
	public static final String[] tokenNames = {
		"<INVALID>", "'main'", "'println'", "'//'", "'Def'", "'Put'", "'Add'", 
		"'Mult'", "'Div'", "'Sum'", "'ContinueUp'", "'ContinueDown'", "'ContinueRight'", 
		"'ContinueLeft'", "'Pos'", "'PosX'", "'PosY'", "'UseColor'", "'Down'", 
		"'Up'", "'Beginning'", "'For'", "'Loop'", "'End'", "'to'", "'Case'", "'When'", 
		"'Then'", "'Else'", "'Repeat'", "'Until'", "'While'", "'Whend'", "'Equal'", 
		"'And'", "'Or'", "'Greater'", "'Smaller'", "'Substr'", "'Random'", "'+'", 
		"'-'", "'*'", "'/'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'='", 
		"'{'", "'}'", "'('", "')'", "'['", "']'", "';'", "','", "BOOLEAN", "ID", 
		"NUMBER", "WS"
	};
	public static final int
		RULE_program = 0, RULE_comments = 1, RULE_sentence = 2, RULE_operation = 3, 
		RULE_logical = 4, RULE_define = 5, RULE_put = 6, RULE_add = 7, RULE_continueup = 8, 
		RULE_continuedown = 9, RULE_continueright = 10, RULE_continueleft = 11, 
		RULE_pos = 12, RULE_posx = 13, RULE_posy = 14, RULE_color = 15, RULE_down = 16, 
		RULE_up = 17, RULE_beggining = 18, RULE_fory = 19, RULE_cases = 20, RULE_when = 21, 
		RULE_elses = 22, RULE_repeat = 23, RULE_whiles = 24, RULE_repeadtcond = 25, 
		RULE_cond = 26, RULE_equations = 27, RULE_equal = 28, RULE_and = 29, RULE_or = 30, 
		RULE_greater = 31, RULE_smaller = 32, RULE_values = 33, RULE_substr = 34, 
		RULE_mult = 35, RULE_div = 36, RULE_sum = 37, RULE_random = 38, RULE_expression = 39, 
		RULE_factor = 40, RULE_term = 41, RULE_logic = 42, RULE_num = 43;
	public static final String[] ruleNames = {
		"program", "comments", "sentence", "operation", "logical", "define", "put", 
		"add", "continueup", "continuedown", "continueright", "continueleft", 
		"pos", "posx", "posy", "color", "down", "up", "beggining", "fory", "cases", 
		"when", "elses", "repeat", "whiles", "repeadtcond", "cond", "equations", 
		"equal", "and", "or", "greater", "smaller", "values", "substr", "mult", 
		"div", "sum", "random", "expression", "factor", "term", "logic", "num"
	};

	@Override
	public String getGrammarFileName() { return "Simple.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Map<String, Object> symbolTable = new HashMap<String, Object>();

	public SimpleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public CommentsContext comments() {
			return getRuleContext(CommentsContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(SimpleParser.PAR_CLOSE, 0); }
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(SimpleParser.BRACKET_CLOSE, 0); }
		public TerminalNode PAR_OPEN() { return getToken(SimpleParser.PAR_OPEN, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(SimpleParser.BRACKET_OPEN, 0); }
		public TerminalNode MAIN() { return getToken(SimpleParser.MAIN, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); match(MAIN);
			setState(89); match(PAR_OPEN);
			setState(90); match(PAR_CLOSE);
			setState(91); match(BRACKET_OPEN);
			setState(92); comments();
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COM) | (1L << DEF) | (1L << PUT) | (1L << ADDO) | (1L << CUP) | (1L << CDOWN) | (1L << CRIGHT) | (1L << CLEFT) | (1L << POS) | (1L << POSX) | (1L << POSY) | (1L << COLOR) | (1L << DOWN) | (1L << UP) | (1L << BEG) | (1L << FOR) | (1L << CASE) | (1L << REPEAT) | (1L << WHILE))) != 0)) {
				{
				{
				setState(93); sentence();
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99); match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(SimpleParser.ID); }
		public TerminalNode COM() { return getToken(SimpleParser.COM, 0); }
		public TerminalNode ID(int i) {
			return getToken(SimpleParser.ID, i);
		}
		public CommentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterComments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitComments(this);
		}
	}

	public final CommentsContext comments() throws RecognitionException {
		CommentsContext _localctx = new CommentsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(COM);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(102); match(ID);
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public ColorContext color() {
			return getRuleContext(ColorContext.class,0);
		}
		public PutContext put() {
			return getRuleContext(PutContext.class,0);
		}
		public ForyContext fory() {
			return getRuleContext(ForyContext.class,0);
		}
		public ContinuedownContext continuedown() {
			return getRuleContext(ContinuedownContext.class,0);
		}
		public ContinuerightContext continueright() {
			return getRuleContext(ContinuerightContext.class,0);
		}
		public UpContext up() {
			return getRuleContext(UpContext.class,0);
		}
		public RepeatContext repeat() {
			return getRuleContext(RepeatContext.class,0);
		}
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public CommentsContext comments() {
			return getRuleContext(CommentsContext.class,0);
		}
		public BegginingContext beggining() {
			return getRuleContext(BegginingContext.class,0);
		}
		public ContinueleftContext continueleft() {
			return getRuleContext(ContinueleftContext.class,0);
		}
		public PosyContext posy() {
			return getRuleContext(PosyContext.class,0);
		}
		public DefineContext define() {
			return getRuleContext(DefineContext.class,0);
		}
		public PosContext pos() {
			return getRuleContext(PosContext.class,0);
		}
		public PosxContext posx() {
			return getRuleContext(PosxContext.class,0);
		}
		public ContinueupContext continueup() {
			return getRuleContext(ContinueupContext.class,0);
		}
		public CasesContext cases() {
			return getRuleContext(CasesContext.class,0);
		}
		public DownContext down() {
			return getRuleContext(DownContext.class,0);
		}
		public WhilesContext whiles() {
			return getRuleContext(WhilesContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitSentence(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentence);
		try {
			setState(127);
			switch (_input.LA(1)) {
			case DEF:
				enterOuterAlt(_localctx, 1);
				{
				setState(108); define();
				}
				break;
			case PUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(109); put();
				}
				break;
			case ADDO:
				enterOuterAlt(_localctx, 3);
				{
				setState(110); add();
				}
				break;
			case CUP:
				enterOuterAlt(_localctx, 4);
				{
				setState(111); continueup();
				}
				break;
			case CDOWN:
				enterOuterAlt(_localctx, 5);
				{
				setState(112); continuedown();
				}
				break;
			case CRIGHT:
				enterOuterAlt(_localctx, 6);
				{
				setState(113); continueright();
				}
				break;
			case CLEFT:
				enterOuterAlt(_localctx, 7);
				{
				setState(114); continueleft();
				}
				break;
			case POS:
				enterOuterAlt(_localctx, 8);
				{
				setState(115); pos();
				}
				break;
			case POSX:
				enterOuterAlt(_localctx, 9);
				{
				setState(116); posx();
				}
				break;
			case POSY:
				enterOuterAlt(_localctx, 10);
				{
				setState(117); posy();
				}
				break;
			case COLOR:
				enterOuterAlt(_localctx, 11);
				{
				setState(118); color();
				}
				break;
			case DOWN:
				enterOuterAlt(_localctx, 12);
				{
				setState(119); down();
				}
				break;
			case UP:
				enterOuterAlt(_localctx, 13);
				{
				setState(120); up();
				}
				break;
			case BEG:
				enterOuterAlt(_localctx, 14);
				{
				setState(121); beggining();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 15);
				{
				setState(122); fory();
				}
				break;
			case CASE:
				enterOuterAlt(_localctx, 16);
				{
				setState(123); cases();
				}
				break;
			case REPEAT:
				enterOuterAlt(_localctx, 17);
				{
				setState(124); repeat();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 18);
				{
				setState(125); whiles();
				}
				break;
			case COM:
				enterOuterAlt(_localctx, 19);
				{
				setState(126); comments();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationContext extends ParserRuleContext {
		public LogicalContext logical() {
			return getRuleContext(LogicalContext.class,0);
		}
		public MultContext mult() {
			return getRuleContext(MultContext.class,0);
		}
		public SubstrContext substr() {
			return getRuleContext(SubstrContext.class,0);
		}
		public RandomContext random() {
			return getRuleContext(RandomContext.class,0);
		}
		public DivContext div() {
			return getRuleContext(DivContext.class,0);
		}
		public SumContext sum() {
			return getRuleContext(SumContext.class,0);
		}
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitOperation(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operation);
		try {
			setState(135);
			switch (_input.LA(1)) {
			case EQUAL:
			case AND:
			case OR:
			case GREATER:
			case SMALLER:
				enterOuterAlt(_localctx, 1);
				{
				setState(129); logical();
				}
				break;
			case SUBSTR:
				enterOuterAlt(_localctx, 2);
				{
				setState(130); substr();
				}
				break;
			case RANDOM:
				enterOuterAlt(_localctx, 3);
				{
				setState(131); random();
				}
				break;
			case MULTO:
				enterOuterAlt(_localctx, 4);
				{
				setState(132); mult();
				}
				break;
			case DIVO:
				enterOuterAlt(_localctx, 5);
				{
				setState(133); div();
				}
				break;
			case SUMO:
				enterOuterAlt(_localctx, 6);
				{
				setState(134); sum();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalContext extends ParserRuleContext {
		public EqualContext equal() {
			return getRuleContext(EqualContext.class,0);
		}
		public SmallerContext smaller() {
			return getRuleContext(SmallerContext.class,0);
		}
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public GreaterContext greater() {
			return getRuleContext(GreaterContext.class,0);
		}
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public LogicalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterLogical(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitLogical(this);
		}
	}

	public final LogicalContext logical() throws RecognitionException {
		LogicalContext _localctx = new LogicalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_logical);
		try {
			setState(142);
			switch (_input.LA(1)) {
			case EQUAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(137); equal();
				}
				break;
			case AND:
				enterOuterAlt(_localctx, 2);
				{
				setState(138); and();
				}
				break;
			case OR:
				enterOuterAlt(_localctx, 3);
				{
				setState(139); or();
				}
				break;
			case GREATER:
				enterOuterAlt(_localctx, 4);
				{
				setState(140); greater();
				}
				break;
			case SMALLER:
				enterOuterAlt(_localctx, 5);
				{
				setState(141); smaller();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(SimpleParser.SEMICOLON, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(SimpleParser.PAR_CLOSE, 0); }
		public TerminalNode COLON() { return getToken(SimpleParser.COLON, 0); }
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public TerminalNode DEF() { return getToken(SimpleParser.DEF, 0); }
		public TerminalNode PAR_OPEN() { return getToken(SimpleParser.PAR_OPEN, 0); }
		public DefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitDefine(this);
		}
	}

	public final DefineContext define() throws RecognitionException {
		DefineContext _localctx = new DefineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_define);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); match(DEF);
			setState(145); match(PAR_OPEN);
			setState(146); match(ID);
			setState(147); match(COLON);
			setState(148); logic();
			setState(149); match(PAR_CLOSE);
			setState(150); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PutContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(SimpleParser.SEMICOLON, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(SimpleParser.PAR_CLOSE, 0); }
		public TerminalNode COLON() { return getToken(SimpleParser.COLON, 0); }
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public TerminalNode PAR_OPEN() { return getToken(SimpleParser.PAR_OPEN, 0); }
		public TerminalNode PUT() { return getToken(SimpleParser.PUT, 0); }
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_put; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterPut(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitPut(this);
		}
	}

	public final PutContext put() throws RecognitionException {
		PutContext _localctx = new PutContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_put);
		try {
			setState(176);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(152); match(PUT);
				setState(153); match(PAR_OPEN);
				setState(154); match(ID);
				setState(155); match(COLON);
				setState(156); logic();
				setState(157); match(PAR_CLOSE);
				setState(158); match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(160); match(PUT);
				setState(161); match(PAR_OPEN);
				setState(162); match(ID);
				setState(163); match(COLON);
				setState(164); operation();
				setState(165); match(PAR_CLOSE);
				setState(166); match(SEMICOLON);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(168); match(PUT);
				setState(169); match(PAR_OPEN);
				setState(170); match(ID);
				setState(171); match(COLON);
				setState(172); expression();
				setState(173); match(PAR_CLOSE);
				setState(174); match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(SimpleParser.SEMICOLON, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(SimpleParser.PAR_CLOSE, 0); }
		public TerminalNode COLON() { return getToken(SimpleParser.COLON, 0); }
		public TerminalNode ADDO() { return getToken(SimpleParser.ADDO, 0); }
		public ValuesContext values() {
			return getRuleContext(ValuesContext.class,0);
		}
		public TerminalNode PAR_OPEN() { return getToken(SimpleParser.PAR_OPEN, 0); }
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterAdd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitAdd(this);
		}
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_add);
		try {
			setState(191);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(178); match(ADDO);
				setState(179); match(PAR_OPEN);
				setState(180); match(ID);
				setState(181); match(PAR_CLOSE);
				setState(182); match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(183); match(ADDO);
				setState(184); match(PAR_OPEN);
				setState(185); match(ID);
				setState(186); match(COLON);
				setState(187); values();
				setState(188); match(PAR_CLOSE);
				setState(189); match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContinueupContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(SimpleParser.SEMICOLON, 0); }
		public TerminalNode CUP() { return getToken(SimpleParser.CUP, 0); }
		public ValuesContext values() {
			return getRuleContext(ValuesContext.class,0);
		}
		public ContinueupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_continueup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterContinueup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitContinueup(this);
		}
	}

	public final ContinueupContext continueup() throws RecognitionException {
		ContinueupContext _localctx = new ContinueupContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_continueup);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193); match(CUP);
			setState(194); values();
			setState(195); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContinuedownContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(SimpleParser.SEMICOLON, 0); }
		public TerminalNode CDOWN() { return getToken(SimpleParser.CDOWN, 0); }
		public ValuesContext values() {
			return getRuleContext(ValuesContext.class,0);
		}
		public ContinuedownContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_continuedown; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterContinuedown(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitContinuedown(this);
		}
	}

	public final ContinuedownContext continuedown() throws RecognitionException {
		ContinuedownContext _localctx = new ContinuedownContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_continuedown);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197); match(CDOWN);
			setState(198); values();
			setState(199); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContinuerightContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(SimpleParser.SEMICOLON, 0); }
		public ValuesContext values() {
			return getRuleContext(ValuesContext.class,0);
		}
		public TerminalNode CRIGHT() { return getToken(SimpleParser.CRIGHT, 0); }
		public ContinuerightContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_continueright; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterContinueright(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitContinueright(this);
		}
	}
